--- a/package.json
+++ b/package.json
@@ -1,12 +1,43 @@
 {
-  "name": "nodebb-plugin-sso-linkedin-oauth2",
-  "version": "0.3.1",
-  "description": "NodeBB LinkedIn SSO OAuth2",
-  "main": "library.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/joe1chen/nodebb-plugin-sso-linkedin-oauth2"
+  "_from": "nodebb-plugin-sso-linkedin-oauth2",
+  "_id": "nodebb-plugin-sso-linkedin-oauth2@0.3.1",
+  "_inBundle": false,
+  "_integrity": "sha1-bRcQo1gFlhgtDCK3sW9gYFHV0FQ=",
+  "_location": "/nodebb-plugin-sso-linkedin-oauth2",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "nodebb-plugin-sso-linkedin-oauth2",
+    "name": "nodebb-plugin-sso-linkedin-oauth2",
+    "escapedName": "nodebb-plugin-sso-linkedin-oauth2",
+    "rawSpec": "",
+    "saveSpec": null,
+    "fetchSpec": "latest"
   },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/nodebb-plugin-sso-linkedin-oauth2/-/nodebb-plugin-sso-linkedin-oauth2-0.3.1.tgz",
+  "_shasum": "6d1710a3580596182d0c22b7b16f606051d5d054",
+  "_spec": "nodebb-plugin-sso-linkedin-oauth2",
+  "_where": "C:\\Projects",
+  "author": {
+    "name": "Joseph Chen",
+    "email": "joseph.chen@gmail.com"
+  },
+  "bugs": {
+    "url": "https://github.com/joe1chen/nodebb-plugin-sso-linkedin-oauth2/issues"
+  },
+  "bundleDependencies": false,
+  "dependencies": {
+    "passport-linkedin-oauth2": "^2.0.0"
+  },
+  "deprecated": false,
+  "description": "NodeBB LinkedIn SSO OAuth2",
+  "devDependencies": {},
+  "homepage": "https://github.com/joe1chen/nodebb-plugin-sso-linkedin-oauth2",
   "keywords": [
     "nodebb",
     "plugin",
@@ -15,20 +46,18 @@
     "single sign on",
     "registration"
   ],
-  "author": "Joseph Chen <joseph.chen@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/joe1chen/nodebb-plugin-sso-linkedin-oauth2/issues"
-  },
-  "dependencies": {
-    "passport-linkedin-oauth2": "joe1chen/passport-linkedin-oauth2#auto-state"
-  },
+  "main": "library.js",
+  "name": "nodebb-plugin-sso-linkedin",
   "nbbpm": {
-    "compatibility": "^0.6.0"
+    "compatibility": "^1.7.1"
   },
-  "homepage": "https://github.com/joe1chen/nodebb-plugin-sso-linkedin-oauth2",
-  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joe1chen/nodebb-plugin-sso-linkedin-oauth2.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "version": "0.3.1"
 }
